--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,23 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug TS",
+      "runtimeExecutable": "ts-node",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "pwa-node"
+      // "program": "${file}"
+      // "outFiles": ["${fileDirname}/${fileBasenameNoExtension}.js"]
+    },
+    {
       "type": "pwa-node",
       "request": "launch",
       "name": "Launch Program",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
+      "skipFiles": ["<node_internals>/**"],
+      "resolveSourceMapLocations": ["${workspaceFolder}/**", "!**/node_modules/**"],
       "runtimeExecutable": "ts-node",
       "program": "${file}",
-      "outFiles": [
-        "${workspaceFolder}/**/*.js"
-      ]
+      "outFiles": ["${workspaceFolder}/**/*.js"]
     }
   ]
 }
